<?xml version="1.0" encoding="utf-8"?>

        <LinearLayout android:id="@+id/standard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="4"
            xmlns:android="http://schemas.android.com/apk/res/android">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <in.technostack.projects.converterforall.CustomViews.SquareButton
                    android:id="@+id/btn_clear"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/buttonMargin"
                    android:layout_weight="1"
                    android:background="@color/colorHomeGridBack"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/clear"
                    android:textColor="@color/clr_color"
                    android:textSize="@dimen/textSize" />

                <in.technostack.projects.converterforall.CustomViews.SquareButton
                    android:id="@+id/btn_delete"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/buttonMargin"
                    android:layout_weight="1"
                    android:background="@color/colorHomeGridBack"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/delete"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/textSize" />

                <in.technostack.projects.converterforall.CustomViews.SquareButton
                    android:id="@+id/btn_division"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/buttonMargin"
                    android:layout_weight="1"
                    android:background="@color/colorHomeGridBack"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/division"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/textSize" />

                <in.technostack.projects.converterforall.CustomViews.SquareButton
                    android:id="@+id/btn_multiplication"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/buttonMargin"
                    android:layout_weight="1"
                    android:background="@color/colorHomeGridBack"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/multiplication"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/textSize" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <in.technostack.projects.converterforall.CustomViews.SquareButton
                    android:id="@+id/btn_seven"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/buttonMargin"
                    android:layout_weight="1"
                    android:background="@color/colorHomeGridBack"
                    android:foreground="?attr/selectableItemBackgroundBorderless"

                    android:text="@string/seven"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/textSize" />

                <in.technostack.projects.converterforall.CustomViews.SquareButton
                    android:id="@+id/btn_eight"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/buttonMargin"
                    android:layout_weight="1"
                    android:background="@color/colorHomeGridBack"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/eight"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/textSize" />

                <in.technostack.projects.converterforall.CustomViews.SquareButton
                    android:id="@+id/btn_nine"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/buttonMargin"
                    android:layout_weight="1"
                    android:background="@color/colorHomeGridBack"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/nine"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/textSize" />

                <in.technostack.projects.converterforall.CustomViews.SquareButton
                    android:id="@+id/btn_minus"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/buttonMargin"
                    android:layout_weight="1"
                    android:background="@color/colorHomeGridBack"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/minus"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/textSize" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <in.technostack.projects.converterforall.CustomViews.SquareButton
                    android:id="@+id/btn_four"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/buttonMargin"
                    android:layout_weight="1"
                    android:background="@color/colorHomeGridBack"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/four"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/textSize" />

                <in.technostack.projects.converterforall.CustomViews.SquareButton
                    android:id="@+id/btn_five"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/buttonMargin"
                    android:layout_weight="1"
                    android:background="@color/colorHomeGridBack"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/five"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/textSize" />

                <in.technostack.projects.converterforall.CustomViews.SquareButton
                    android:id="@+id/btn_six"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/buttonMargin"
                    android:layout_weight="1"
                    android:background="@color/colorHomeGridBack"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/six"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/textSize" />

                <in.technostack.projects.converterforall.CustomViews.SquareButton
                    android:id="@+id/btn_plus"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/buttonMargin"
                    android:layout_weight="1"
                    android:background="@color/colorHomeGridBack"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/plus"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/textSize" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="3">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <in.technostack.projects.converterforall.CustomViews.SquareButton
                            android:id="@+id/btn_one"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_margin="@dimen/buttonMargin"
                            android:layout_weight="1"
                            android:background="@color/colorHomeGridBack"
                            android:foreground="?attr/selectableItemBackgroundBorderless"
                            android:text="@string/one"
                            android:textColor="@color/textColor"
                            android:textSize="@dimen/textSize" />

                        <in.technostack.projects.converterforall.CustomViews.SquareButton
                            android:id="@+id/btn_two"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_margin="@dimen/buttonMargin"
                            android:layout_weight="1"
                            android:background="@color/colorHomeGridBack"
                            android:foreground="?attr/selectableItemBackgroundBorderless"
                            android:text="@string/two"
                            android:textColor="@color/textColor"
                            android:textSize="@dimen/textSize" />

                        <in.technostack.projects.converterforall.CustomViews.SquareButton
                            android:id="@+id/btn_three"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_margin="@dimen/buttonMargin"
                            android:layout_weight="1"
                            android:background="@color/colorHomeGridBack"
                            android:foreground="?attr/selectableItemBackgroundBorderless"
                            android:text="@string/three"
                            android:textColor="@color/textColor"
                            android:textSize="@dimen/textSize" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <in.technostack.projects.converterforall.CustomViews.SquareButton
                            android:id="@+id/btn_modulo"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_margin="@dimen/buttonMargin"
                            android:layout_weight="1"
                            android:background="@color/colorHomeGridBack"
                            android:foreground="?attr/selectableItemBackgroundBorderless"
                            android:text="@string/modulo"
                            android:textColor="@color/textColor"
                            android:textSize="@dimen/textSize" />

                        <in.technostack.projects.converterforall.CustomViews.SquareButton
                            android:id="@+id/btn_zero"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_margin="@dimen/buttonMargin"
                            android:layout_weight="1"
                            android:background="@color/colorHomeGridBack"
                            android:foreground="?attr/selectableItemBackgroundBorderless"
                            android:text="@string/zero"
                            android:textColor="@color/textColor"
                            android:textSize="@dimen/textSize" />

                        <in.technostack.projects.converterforall.CustomViews.SquareButton
                            android:id="@+id/btn_dot"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_margin="@dimen/buttonMargin"
                            android:layout_weight="1"
                            android:background="@color/colorHomeGridBack"
                            android:foreground="?attr/selectableItemBackgroundBorderless"
                            android:text="@string/dot"
                            android:textColor="@color/textColor"
                            android:textSize="@dimen/textSize" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <Button
                        android:id="@+id/btn_equal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/buttonMargin"
                        android:background="@color/colorAccent"
                        android:text="@string/equal"
                        android:textColor="@color/white"
                        android:foreground="?attr/selectableItemBackgroundBorderless"
                        android:textSize="@dimen/textSize" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
